force-app/main/default/objects/SBQQ__ProductAttribute__c/SBQQ__ProductAttribute__c.object-meta.xml
<CustomObject>
    <description>Product instance attribute.</description>
    <label>Attribute Item</label>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribute Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>