force-app/main/default/objects/SBQQ__ProductAttribute__c/fields/SBQQ__AppliedImmediately__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AppliedImmediately__c</fullName>
        <description>Flag that indicates changes to this configuration attribute should apply immediately.</description>
        <inlineHelpText>Unsupported Field</inlineHelpText>
        <label>Apply Immediately</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>