force-app/main/default/objects/SBQQ__ProductAttribute__c/fields/SBQQ__ApplyToProductOptions__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ApplyToProductOptions__c</fullName>
        <description>Apply configuration attribute selection to product options.</description>
        <inlineHelpText>Unsupported Field</inlineHelpText>
        <label>Apply To Product Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>