force-app/main/default/objects/SBQQ__ProductAttribute__c/fields/SBQQ__Attribute__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Attribute__c</fullName>
        <description>Configuration Attribute this product attribute inherits.</description>
        <inlineHelpText>Configuration Attribute this product attribute inherits.</inlineHelpText>
        <label>Configuration Attribute</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The related configuration attribute must be global</errorMessage>
            <filterItems>
                <field>SBQQ__ConfigurationAttribute__c.SBQQ__Product__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ConfigurationAttribute__c</referenceTo>
        <relationshipLabel>Attribute Items</relationshipLabel>
        <relationshipName>ProductAttributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>