force-app/main/default/objects/SBQQ__ProductAttribute__c/fields/SBQQ__AttributeSet__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AttributeSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute Set</label>
        <referenceTo>SBQQ__AttributeSet__c</referenceTo>
        <relationshipLabel>Attribute Items</relationshipLabel>
        <relationshipName>Product_Attributes</relationshipName>
        <type>Lookup</type>
    </CustomField>