force-app/main/default/objects/SBQQ__ProductAttribute__c/fields/SBQQ__AutoSelect__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AutoSelect__c</fullName>
        <description>Set the value of this attribute when adding a product from a Dynamic Feature using the value of the added product&apos;s matching field.</description>
        <inlineHelpText>Unsupported Field</inlineHelpText>
        <label>Auto-Select</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>