force-app/main/default/objects/SBQQ__ProductAttribute__c/fields/SBQQ__Required__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Required__c</fullName>
        <description>Indicates whether the attributes requires a value.</description>
        <inlineHelpText>Unsupported Field</inlineHelpText>
        <label>Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>