force-app/main/default/objects/SBQQ__ProductAttribute__c/fields/SBQQ__Sequence__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Sequence__c</fullName>
        <description>Order in which this attribute is displayed</description>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>