force-app/main/default/objects/SBQQ__ProductAttribute__c/fields/SBQQ__ShownValues__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ShownValues__c</fullName>
        <description>Values from the backing picklist field that should be shown on this bundle.</description>
        <inlineHelpText>Unsupported Field</inlineHelpText>
        <label>Shown Values</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </CustomField>