force-app/main/default/objects/SBQQ__ProductAttribute__c/fields/SBQQ__TargetField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TargetField__c</fullName>
        <formula>TEXT(SBQQ__Attribute__r.SBQQ__TargetField__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Field</label>
        <type>Text</type>
    </CustomField>